Add new font for footer

--- a/templates/404.html
+++ b/templates/404.html
@@ -7,9 +7,10 @@ Ups, 404
 {% block body %}
 <section>
 	<div>
-		<ul class="horizontal">
-			<h1>Something went wrong, 404...</h1>
-		</ul>
+		<h1>Something went wrong, 404...</h1>
 	</div>
 </section>
+<footer>
+	<p>merive inc.</p>
+</footer>
 {% endblock %}
