Add page My Projects

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <h4>
             <nav class="nav nav-masthead justify-content-center">
                 <a class="nav-link" href="/home">merive_</a>
+                <a class="nav-link" href="/projects">My projects</a>
                 <a class="nav-link" href="https://github.com/merive">My GitHub</a>
                 <a class="nav-link" href="https://twitter.com/merive_">My Twitter</a>
                 <a class="nav-link" href="https://reddit.com/user/merive_">My Reddit</a>
