--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,3 +46,19 @@ footer {
     color: black;
     font-family: 'Monoton', cursive;
 }
+
+.mp {
+    position: absolute;
+    width: 100%;
+    bottom: 100%;
+    text-align: center;
+    font-size: 24px;
+}
+
+.project {
+    font-size: 12px;
+    float: left;
+    margin: 1.858736059%;
+    width: 29.615861214%;
+}
+
