Add new page(My Links) Update README.md Update style.css Update app.py Update base.html Update projects.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,8 @@
         <h4>
             <nav class="nav nav-masthead justify-content-center">
                 <a class="nav-link" href="/home">merive_</a>
-                <a class="nav-link" href="/projects">My projects</a>
-                <a class="nav-link" href="https://github.com/merive">My GitHub</a>
-                <a class="nav-link" href="https://twitter.com/merive_">My Twitter</a>
-                <a class="nav-link" href="https://reddit.com/user/merive_">My Reddit</a>
+                <a class="nav-link" href="/projects">My Projects</a>
+                <a class="nav-link" href="/links">My Links</a>
                 <a class="nav-link" href="/about">About</a>
             </nav>
         </h4>
