--- a/templates/404.html
+++ b/templates/404.html
@@ -6,11 +6,8 @@
 
 {% block body %}
     <section>
-        <div>
-            <h1>Something went wrong, 404...</h1>
+        <div class="tit">
+            <h1><b>Something went wrong, 404...</b></h1>
         </div>
     </section>
-    <footer>
-        <p>merive inc.</p>
-    </footer>
 {% endblock %}
