--- a/templates/home.html
+++ b/templates/home.html
@@ -7,11 +7,8 @@
 {% block body %}
     <section>
         <div>
-            <h1>Welcome to my site!</h1>
+            <div class="tit"><h1><b>Welcome to my site!</b></h1></div>
         </div>
     </section>
-    <footer>
-        <p>merive inc.</p>
-    </footer>
 {% endblock %}
 
