--- a/templates/links.html
+++ b/templates/links.html
@@ -6,14 +6,13 @@
 
 {% block body %}
     <section>
-        <div class="mp">
+        <div class="tit">
             <h1>
-                <u>My Links</u>
+                <b>My Links</b>
             </h1>
         </div>
-        <br>
-        <div class="projects">
-            <figure class="project">
+        <div class='elements'>
+            <figure class="element">
                 <h2><a href="https://github.com/merive">My GitHub</a></h2>
                 <h3>
                     In my github, I work on my designs.
@@ -21,7 +20,7 @@
                     <br>You can learn more about my projects on the <a href="/projects">My Projects page</a>.
                 </h3>
             </figure>
-            <figure class="project">
+            <figure class="element">
                 <h2><a href="https://twitter.com/merive_">My Twitter</a></h2>
                 <h3>
                     This is my mini blog.
@@ -29,7 +28,7 @@
                     <br>I often tweet.
                 </h3>
             </figure>
-            <figure class="project">
+            <figure class="element">
                 <h2><a href="https://www.reddit.com/user/merive_">My Reddit</a></h2>
                 <h3>
                     This is my another blog.
@@ -39,7 +38,4 @@
             </figure>
         </div>
     </section>
-    <footer>
-        <p>merive inc.</p>
-    </footer>
 {% endblock %}
