--- a/templates/about.html
+++ b/templates/about.html
@@ -7,52 +7,57 @@
 {% block body %}
     <section>
         <h1>
-            <div class='about'>
-                <b>Start</b>
-                <p>
-                    Hello, I'm Max aka merive_, I'm programmer.
-                    <br>I write in Python, Java, HTML/CSS.
-                    <br>I've been programming for over a year now.
-                    <br>I don’t remember how it all began, but I came to programming in the summer of 2019, then I began
-                    to study Python...
-                </p>
-                <br><br><br>
-                <b>Python</b>
-                <p>
-                    For several months, more precisely 3, I studied Python and its libraries.
-                    <br>Today I know more than 15 libraries and am able to work with them.
-                    <br>I love this language since it was my beginning, it is like the first teacher...
-                </p>
-                <br><br><br>
-                <b>HTML/CSS</b>
-                <p>
-                    My acquaintance with HTML began during the study of Python and I did not like it, it was not clear
-                    to me.
-                    <br>Later, when I began to delve into it, I realized how easy and useful it is.
-                    <br>There were no problems with the CSS and I quickly studied it...
-                </p>
-                <br><br><br>
-                <b>Java</b>
-                <p>
-                    I have long wanted to learn Java.
-                    <br>I started learning this language at the beginning of 2020.
-                    <br>Now I am making applications with GUI and really love this language.
-                    <br>Soon I will study Android programming ...
-                </p>
-                <br><br><br>
-                <b>Now</b>
-                <p>
-                    Now programming is part of my life, just a year ago I was just thinking of becoming a programmer,
-                    and now I am one.
-                    <br>I am glad that I made my future so.
-                    <br>Every day I do something, study, learn.
-                    <br>Programming has opened a new world for me ...
-                </p>
+            <div class='elements'>
+                <figure class="element">
+                    <div class="tit"><b>Start</b></div>
+                    <p>
+                        Hello, I'm Max aka merive_, I'm programmer.
+                        <br>I write in Python, Java, HTML/CSS.
+                        <br>I've been programming for over a year now.
+                        <br>I don’t remember how it all began, but I came to programming in the summer of 2019, then I
+                        began
+                        to study Python...
+                    </p>
+                </figure>
+                <figure class="element">
+                    <div class="tit"><b>Python</b></div>
+                    <p>
+                        For several months, more precisely 3, I studied Python and its libraries.
+                        <br>Today I know more than 15 libraries and am able to work with them.
+                        <br>I love this language since it was my beginning, it is like the first teacher...
+                    </p>
+                </figure>
+                <figure class="element">
+                    <div class="tit"><b>HTML/CSS</b></div>
+                    <p>
+                        My acquaintance with HTML began during the study of Python and I did not like it, it was not
+                        clear
+                        to me.
+                        <br>Later, when I began to delve into it, I realized how easy and useful it is.
+                        <br>There were no problems with the CSS and I quickly studied it...
+                    </p>
+                </figure>
+                <figure class="element">
+                    <div class="tit"><b>Java</b></div>
+                    <p>
+                        I have long wanted to learn Java.
+                        <br>I started learning this language at the beginning of 2020.
+                        <br>Now I am making applications with GUI and really love this language.
+                        <br>Soon I will study Android programming ...
+                    </p>
+                </figure>
+                <figure class="element">
+                    <div class="tit"><b>Now</b></div>
+                    <p>
+                        Now programming is part of my life, just a year ago I was just thinking of becoming a
+                        programmer,
+                        and now I am one.
+                        <br>I am glad that I made my future so.
+                        <br>Every day I do something, study, learn.
+                        <br>Programming has opened a new world for me ...
+                    </p>
+                </figure>
             </div>
         </h1>
-        <footer>
-            <br><br><br><br><br>
-            merive inc.
-        </footer>
     </section>
 {% endblock %}
