--- a/templates/about.html
+++ b/templates/about.html
@@ -8,6 +8,7 @@
     <section>
         <h1>
             <div class='elements'>
+                <div class="tit"><b>About</b></div>
                 <figure class="element">
                     <div class="tit"><b>Start</b></div>
                     <p>
