--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,7 +26,7 @@ h1 {
 section {
     position: absolute;
     width: 100%;
-    top: 30%;
+    top: 10%;
     text-align: center;
     color: black;
     font-size: 1em;
@@ -34,6 +34,10 @@ section {
 
 .tit {
     font-size: 1.2em;
+}
+
+.home {
+    font-size: 2em;
 }
 
 .selector-for-some-widget {
