--- a/templates/404.html
+++ b/templates/404.html
@@ -6,8 +6,6 @@
 
 {% block body %}
     <section>
-        <div class="tit">
-            <h1><b>Something went wrong, 404...</b></h1>
-        </div>
+        <div class="home"><h1><b>Something went wrong, 404...</b></h1></div>
     </section>
 {% endblock %}
