--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 {% block body %}
     <section>
         <div>
-            <div class="tit"><h1><b>Welcome to my site!</b></h1></div>
+            <div class="home"><h1><b>Welcome to my site!</b></h1></div>
         </div>
     </section>
 {% endblock %}
