Update files Add Monoton font in tit and home

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,10 +34,12 @@ section {
 
 .tit {
     font-size: 1.2em;
+    font-family: 'Monoton', cursive;
 }
 
 .home {
     font-size: 2em;
+    font-family: 'Monoton', cursive;
 }
 
 .selector-for-some-widget {
