--- a/templates/projects.html
+++ b/templates/projects.html
@@ -8,7 +8,7 @@
     <section>
         <div class="tit">
             <h1>
-                <b>My Projects</b>
+                My Projects
             </h1>
         </div>
         <div class='elements'>
