--- a/templates/links.html
+++ b/templates/links.html
@@ -8,7 +8,7 @@
     <section>
         <div class="tit">
             <h1>
-                My Links
+                <b>My Links</b>
             </h1>
         </div>
         <div class='elements'>
