--- a/templates/projects.html
+++ b/templates/projects.html
@@ -6,11 +6,7 @@
 
 {% block body %}
     <section>
-        <div class="tit">
-            <h1>
-                <b>My Projects</b>
-            </h1>
-        </div>
+        <div class="tit"><h1>My Projects</h1></div>
         <div class='elements'>
             <figure class="element">
                 <h2><a href="https://github.com/merive/AssistBOT">AssistBOT</a></h2>
