--- a/templates/links.html
+++ b/templates/links.html
@@ -6,11 +6,7 @@
 
 {% block body %}
     <section>
-        <div class="tit">
-            <h1>
-                <b>My Links</b>
-            </h1>
-        </div>
+        <div class="tit"><h1>My Links</h1></div>
         <div class='elements'>
             <figure class="element">
                 <h2><a href="https://github.com/merive">My GitHub</a></h2>
