--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
 {% block body %}
     <section>
         <h3 class='elements'>
-            <div class="tit"><h1>About</h1></div>
+            <div class="tit">About</div>
             <figure class="element">
                 <h2><b>Start</b></h2>
                 <p>
