--- a/templates/about.html
+++ b/templates/about.html
@@ -6,58 +6,43 @@
 
 {% block body %}
     <section>
-        <h3 class='elements'>
-            <div class="tit">About</div>
-            <figure class="element">
-                <h2><b>Start</b></h2>
-                <p>
-                    Hello, I'm Max aka merive_, I'm programmer.
-                    <br>I write in Python, Java, HTML/CSS.
-                    <br>I've been programming for over a year now.
-                    <br>I don’t remember how it all began, but I came to programming in the summer of 2019, then I
-                    began
-                    to study Python...
-                </p>
-            </figure>
-            <figure class="element">
-                <h2><b>Python</b></h2>
-                <p>
-                    For several months, more precisely 3, I studied Python and its libraries.
-                    <br>Today I know more than 15 libraries and am able to work with them.
-                    <br>I love this language since it was my beginning, it is like the first teacher...
-                </p>
-            </figure>
-            <figure class="element">
-                <h2><b>HTML/CSS</b></h2>
-                <p>
-                    My acquaintance with HTML began during the study of Python and I did not like it, it was not
-                    clear
-                    to me.
-                    <br>Later, when I began to delve into it, I realized how easy and useful it is.
-                    <br>There were no problems with the CSS and I quickly studied it...
-                </p>
-            </figure>
-            <figure class="element">
-                <h2><b>Java</b></h2>
-                <p>
-                    I have long wanted to learn Java.
-                    <br>I started learning this language at the beginning of 2020.
-                    <br>Now I am making applications with GUI and really love this language.
-                    <br>Soon I will study Android programming...
-                </p>
-            </figure>
-            <figure class="element">
-                <h2><b>Now</b></h2>
-                <p>
-                    Now programming is part of my life, just a year ago I was just thinking of becoming a
-                    programmer,
-                    and now I am one.
-                    <br>I am glad that I made my future so.
-                    <br>Every day I do something, study, learn.
-                    <br>Programming has opened a new world for me...
-                </p>
-            </figure>
-            </div>
-        </h3>
+        <h2><b>Start</b></h2>
+        <p>
+            Hello, I'm Max aka merive_, I'm programmer.
+            <br>I write in Python, Java, HTML/CSS.
+            <br>I've been programming for over a year now.
+            <br>I don’t remember how it all began, but I came to programming in the summer of 2019, then I
+            began to study Python...
+        </p>
+        <h2><b>Python</b></h2>
+        <p>
+            For several months, more precisely 3, I studied Python and its libraries.
+            <br>Today I know more than 15 libraries and am able to work with them.
+            <br>I love this language since it was my beginning.
+        </p>
+        <h2><b>HTML/CSS</b></h2>
+        <p>
+            My acquaintance with HTML began during the study of Python and I did not like it, it was not
+            clear
+            to me.
+            <br>Later, when I began to delve into it, I realized how easy and useful it is.
+            <br>There were no problems with the CSS and I quickly studied it...
+        </p>
+        <h2><b>Java</b></h2>
+        <p>
+            I have long wanted to learn Java.
+            <br>I started learning this language at the beginning of 2020.
+            <br>Now I am making applications with GUI and really love this language.
+            <br>Soon I will study Android programming...
+        </p>
+        <h2><b>Now</b></h2>
+        <p>
+            Now programming is part of my life, just a year ago I was just thinking of becoming a
+            programmer,
+            and now I am one.
+            <br>I am glad that I made my future so.
+            <br>Every day I do something, study, learn.
+            <br>Programming has opened a new world for me...
+        </p>
     </section>
 {% endblock %}
