--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,24 +5,51 @@
 {% endblock %}
 
 {% block body %}
+    <style>
+        a {
+            color: black;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: #111;
+            text-decoration: none;
+        }
+    </style>
     <section>
-        <div class="tit"><h1>My Projects</h1></div>
-        <div class='elements'>
-            <figure class="element">
-                <h2><a href="https://github.com/merive/AssistBOT">AssistBOT</a></h2>
-                <h3>This is my first major project.<br>This is a bot for discord chats.<br>It has many functions.<br>I
-                    have been working on it for a long time and am proud of this project.</h3>
-            </figure>
-            <figure class="element">
-                <h2><a href="https://github.com/merive/JavaUtilites">JavaUtilites</a></h2>
-                <h3>My major project in Java.<br>In it, I collect my own set of utilities for different occasions.<br>I
-                    try to develop it as a cool idea.</h3>
-            </figure>
-            <figure class="element">
-                <h2><a href="https://github.com/merive/merive.com">merive.com</a></h2>
-                <h3>This is the project you are on.<br>He is developing right now and will be developing with me.<br>This
-                    is my personal site.<br>On it you can get to know me better.</h3>
-            </figure>
-        </div>
+        <h2>
+            <b>
+                <a href="https://github.com/merive/AssistBOT">AssistBOT</a>
+            </b>
+        </h2>
+        <p>
+            This is my first major project.
+            <br>This is a bot for discord chats.
+            <br>It has many functions.
+            <br>I have been working on it for a long time and am proud of this project.
+        </p>
+
+        <h2>
+            <b>
+                <a href="https://github.com/merive/JavaUtilites">JavaUtilities</a>
+            </b>
+        </h2>
+        <p>
+            My major project in Java.
+            <br>In it, I collect my own set of utilities for different occasions.
+            <br>I try to develop it as a cool idea.
+        </p>
+
+        <h2>
+            <b>
+                <a href="https://github.com/merive/merive.com">merive.com</a>
+            </b>
+        </h2>
+        <p>
+            This is the project you are on.
+            <br>He is developing right now and will be developing with me.
+            <br>This is my personal site.
+            <br>On it you can get to know me better.
+        </p>
     </section>
 {% endblock %}
