--- a/templates/home.html
+++ b/templates/home.html
@@ -5,10 +5,36 @@
 {% endblock %}
 
 {% block body %}
-    <section>
-        <div>
-            <div class="home"><h1>Welcome to my site!</h1></div>
-        </div>
-    </section>
+    <style>
+        .home {
+            position: absolute;
+            top: 41%;
+            left: 50%;
+            margin-right: -50%;
+            transform: translate(-50%, -50%);
+
+            font-family: 'Lexend Peta', sans-serif;
+            font-size: 4em;
+            color: #000000;
+        }
+
+        .footer {
+            font-family: 'Dancing Script', cursive;
+            font-size: 3em;
+            color: black;
+
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            margin-right: -50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
+    <div>
+        <div class="home">Welcome to my site!</div>
+    </div>
+    <div>
+        <div class="footer">merive_</div>
+    </div>
 {% endblock %}
 
