--- a/templates/404.html
+++ b/templates/404.html
@@ -5,7 +5,37 @@
 {% endblock %}
 
 {% block body %}
+    <style>
+        .error {
+            position: absolute;
+            top: 41%;
+            left: 50%;
+            margin-right: -50%;
+            transform: translate(-50%, -50%);
+
+            font-family: 'Lexend Peta', sans-serif;
+            font-size: 4em;
+            color: #000000;
+        }
+
+        .footer {
+            font-family: 'Dancing Script', cursive;
+            font-size: 3em;
+            color: black;
+
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            margin-right: -50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
     <section>
-        <div class="home"><h1>Something went wrong, 404...</h1></div>
+        <div>
+            <div class="error">Something went wrong, 404...</div>
+        </div>
+        <div>
+            <div class="footer">merive_</div>
+        </div>
     </section>
 {% endblock %}
