--- a/templates/404.html
+++ b/templates/404.html
@@ -14,7 +14,7 @@
             transform: translate(-50%, -50%);
 
             font-family: 'Lexend Peta', sans-serif;
-            font-size: 4em;
+            font-size: 2em;
             color: #000000;
         }
 
@@ -32,7 +32,7 @@
     </style>
     <section>
         <div>
-            <div class="error">Something went wrong, 404...</div>
+            <div class="error">Something went<br>wrong, 404...</div>
         </div>
         <div>
             <div class="footer">merive_</div>
