--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
             transform: translate(-50%, -50%);
 
             font-family: 'Lexend Peta', sans-serif;
-            font-size: 4em;
+            font-size: 3em;
             color: #000000;
         }
 
@@ -31,7 +31,7 @@
         }
     </style>
     <div>
-        <div class="home">Welcome to my site!</div>
+        <div class="home">Welcome to<br>my site!</div>
     </div>
     <div>
         <div class="footer">merive_</div>
