--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,18 @@
 {% endblock %}
 
 {% block body %}
+    <style>
+        .footer {
+            font-family: 'Dancing Script', cursive;
+            font-size: 3em;
+            color: black;
+
+            position: absolute;
+            left: 50%;
+            margin-right: -50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
     <section>
         <h2><b>Start</b></h2>
         <p>
@@ -45,4 +57,7 @@
             <br>Programming has opened a new world for me...
         </p>
     </section>
+    <div>
+        <div class="footer">merive_</div>
+    </div>
 {% endblock %}
