--- a/templates/links.html
+++ b/templates/links.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    My Links
+    Links
 {% endblock %}
 
 {% block body %}
@@ -14,6 +14,18 @@
         a:hover {
             color: #111;
             text-decoration: none;
+        }
+
+        .footer {
+            font-family: 'Dancing Script', cursive;
+            font-size: 3em;
+            color: black;
+
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            margin-right: -50%;
+            transform: translate(-50%, -50%);
         }
     </style>
     <section>
@@ -44,4 +56,7 @@
             <br>So far, I rarely do posts.
         </p>
     </section>
+    <div>
+        <div class="footer">merive_</div>
+    </div>
 {% endblock %}
