--- a/templates/about.html
+++ b/templates/about.html
@@ -14,6 +14,8 @@
             position: absolute;
             left: 50%;
             margin-right: -50%;
+            margin-top: 3%;
+            margin-bottom: 2%;
             transform: translate(-50%, -50%);
         }
     </style>
