--- a/templates/404.html
+++ b/templates/404.html
@@ -26,6 +26,8 @@
             position: absolute;
             bottom: 0;
             left: 50%;
+            margin-top: 2%;
+            margin-bottom: 2%;
             margin-right: -50%;
             transform: translate(-50%, -50%);
         }
