--- a/templates/home.html
+++ b/templates/home.html
@@ -27,6 +27,8 @@
             bottom: 0;
             left: 50%;
             margin-right: -50%;
+            margin-top: 2%;
+            margin-bottom: 2%;
             transform: translate(-50%, -50%);
         }
     </style>
