--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Projects
+Projects
 {% endblock %}
 
 {% block body %}
-    <style>
+<style>
         a {
             color: black;
             text-decoration: none;
@@ -16,57 +16,52 @@
             text-decoration: none;
         }
 
-        .footer {
-            font-family: 'Dancing Script', cursive;
-            font-size: 3em;
-            color: black;
+</style>
+<section>
+    <h2>
+        <b>
+            <a href="https://github.com/merive/AssistBOT">AssistBOT</a>
+        </b>
+    </h2>
+    <p>
+        This is my first major project.
+        <br>This is a bot for discord chats.
+        <br>It has many functions.
+        <br>I have been working on it for a long time and am proud of this project.
+    </p>
 
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            margin-right: -50%;
-            margin-top: 2%;
-            margin-bottom: 2%;
-            transform: translate(-50%, -50%);
-        }
-    </style>
-    <section>
-        <h2>
-            <b>
-                <a href="https://github.com/merive/AssistBOT">AssistBOT</a>
-            </b>
-        </h2>
-        <p>
-            This is my first major project.
-            <br>This is a bot for discord chats.
-            <br>It has many functions.
-            <br>I have been working on it for a long time and am proud of this project.
-        </p>
+    <h2>
+        <b>
+            <a href="https://github.com/merive/JavaUtilites">JavaUtilities</a>
+        </b>
+    </h2>
+    <p>
+        My major project in Java.
+        <br>In it, I collect my own set of utilities for different occasions.
+        <br>I try to develop it as a cool idea.
+    </p>
 
-        <h2>
-            <b>
-                <a href="https://github.com/merive/JavaUtilites">JavaUtilities</a>
-            </b>
-        </h2>
-        <p>
-            My major project in Java.
-            <br>In it, I collect my own set of utilities for different occasions.
-            <br>I try to develop it as a cool idea.
-        </p>
+    <h2>
+        <b>
+            <a href="https://github.com/merive/merive.com">merive.com</a>
+        </b>
+    </h2>
+    <p>
+        This is the project you are on.
+        <br>He is developing right now and will be developing with me.
+        <br>This is my personal site.
+        <br>On it you can get to know me better.
+    </p>
 
-        <h2>
-            <b>
-                <a href="https://github.com/merive/merive.com">merive.com</a>
-            </b>
-        </h2>
-        <p>
-            This is the project you are on.
-            <br>He is developing right now and will be developing with me.
-            <br>This is my personal site.
-            <br>On it you can get to know me better.
-        </p>
-    </section>
-    <div>
-        <div class="footer">merive_</div>
-    </div>
+    <h2>
+        <b>
+            <a href="https://github.com/merive/Press1MTimes">Press 1M Times</a>
+        </b>
+    </h2>
+    <p>
+        Android Clicker-Game.
+        <br>A simple game in which the main task is to find out what happens after a million clicks on the red button...
+        <br>My first serious android app.
+    </p>
+</section>
 {% endblock %}
