--- a/templates/projects.html
+++ b/templates/projects.html
@@ -55,7 +55,7 @@ Projects
 
     <h2>
         <b>
-            <a href="https://github.com/merive/Press1MTimes">Press 1M Times</a>
+            <a href="/pressmtimes">Press 1M Times</a>
         </b>
     </h2>
     <p>
