Fix bug in v2.0.8

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -55,7 +55,7 @@ Projects
 
     <h2>
         <b>
-            <a href="/pressmtimes">Press 1M Times</a>
+            <a href="/press1mtimes">Press 1M Times</a>
         </b>
     </h2>
     <p>
