--- a/templates/press1mtimes.html
+++ b/templates/press1mtimes.html
@@ -20,7 +20,7 @@ Press1MTimes
 
     .btn {
         position: absolute;
-        margin-top: 24em;
+        top: 65%;
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
@@ -53,18 +53,19 @@ Press1MTimes
         color: #AF251B;
     }
 
-    .about {
+    .version {
         position: absolute;
-        bottom: 10%;
+        bottom: 7%;
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
 
-        font-size: 2em;
+        font-size: 1.5em;
         color: #C82A1E;
     }
 </style>
     <div class="title">Press 1M Times</div>
     <div class="btn"><a href="/download">DOWNLOAD</a></div>
+    <div class="version">Actual version: <i>v1.2.4</i></div>
 </html>
 {% endblock %}
