--- a/templates/press1mtimes.html
+++ b/templates/press1mtimes.html
@@ -1,4 +1,4 @@
-{% extends 'base_p1mt.html' %}
+{% extends 'p1mt_base.html' %}
 
 {% block title %}
 Press1MTimes
@@ -55,7 +55,7 @@ Press1MTimes
 
     .version {
         position: absolute;
-        bottom: 5%;
+        bottom: 3%;
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
@@ -66,6 +66,6 @@ Press1MTimes
 </style>
     <div class="title">Press 1M Times</div>
     <div class="btn"><a href="/download">DOWNLOAD</a></div>
-    <div class="version">Actual version: <i>v1.2.4</i></div>
+    <div class="version">Actual version: <i>v1.2.5</i></div>
 </html>
 {% endblock %}
