--- a/templates/bases/base.html
+++ b/templates/bases/base.html
@@ -17,6 +17,7 @@
     body {
         background-image: linear-gradient(to right, #286334, #327a70);
         font-family: 'Changa', sans-serif;
+        font-size: 17px;
     }
 
     ::-webkit-scrollbar {
