--- a/templates/bases/p1mt_base.html
+++ b/templates/bases/p1mt_base.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Changa&display=swap" rel="stylesheet">
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" rel="stylesheet">
-    <link href="{{ url_for('static', filename='press1mtimes_icon.png') }}" rel="shortcut icon">
+    <link href="{{ url_for('static', filename='icon.png') }}" rel="shortcut icon">
 </head>
 <body>
 <style>
