--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'bases/base.html' %}
 
 {% block title %}
 Projects
@@ -6,16 +6,20 @@ Projects
 
 {% block body %}
 <style>
-        a {
-            color: black;
-            text-decoration: none;
-        }
+    a {
+        color: black;
+        text-decoration: none;
+    }
 
-        a:hover {
-            color: #111;
-            text-decoration: none;
-        }
+    a:hover {
+        color: #111;
+        text-decoration: none;
+    }
 
+    section {
+        padding-left: 2%;
+        padding-top: 1%;
+    }
 </style>
 <section>
     <h2>
