--- a/templates/press1mtimes/press1mtimes.html
+++ b/templates/press1mtimes/press1mtimes.html
@@ -29,6 +29,26 @@ Press1MTimes
         background-image: url('static/button.png');
     }
 
+    .btn a {
+        display: block;
+        float: left;
+        width: 100%;
+        padding-top: 50%;
+        padding-bottom: 50%;
+        line-height: 1em;
+
+        color: #AF251B;
+        text-align: center;
+        font-family: Verdana;
+        font-size: 1.7em;
+        font-weight: bold;
+        text-decoration: none;
+    }
+
+    .btn a:hover {
+        color: #AF251B;
+    }
+
     .version {
         position: absolute;
         bottom: 3%;
