--- a/templates/press1mtimes/update.html
+++ b/templates/press1mtimes/update.html
@@ -23,37 +23,33 @@
     }
 
     .elm {
-        position: absolute;
-        top: 30%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
-
-        font-size: 2em;
+        padding-left: 2%;
         color: #C82A1E;
     }
 
     .inp {
-        font-size: 1em;
         color: #2C2C2C;
         background-color: #C82A1E;
         border: 5px solid #000;
-        padding: 8px 20px;
+        padding: 8px;
 	  	border-radius: 8px;
     }
 
-    .inp:
+    b {
+        font-size: 2em;
+    }
+
 
 </style>
 
 <div class="elm">
-   	<b>ONLY FOR DEV</b>
-      <form action="/load" method="POST" 
-         enctype="multipart/form-data">
-         <input class="inp" type="file" name="file"/>
-         <br><br><input class="inp" name="key">
-         <br><br><input class="inp" type="submit"/>
-       </form>
+    <b>ONLY FOR DEV</b>
+    <form action="/load" enctype="multipart/form-data"
+          method="POST">
+        <input class="inp" name="file" type="file"/>
+        <br><br><input class="inp" name="key">
+        <br><br><input class="inp" type="submit"/>
+    </form>
 </div>
 
 </body>
